--- a/password-reset.html
+++ b/password-reset.html
@@ -122,8 +122,8 @@
 
     <script>
         // Initialize Supabase
-        const SUPABASE_URL = 'https://<your-supabase-url>';
-        const SUPABASE_ANON_KEY = '<your-anon-key>';
+        const SUPABASE_URL = 'https://tcyccgouezwsvdomjufg.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRjeWNjZ291ZXp3c3Zkb21qdWZnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzI2Mjg2NzAsImV4cCI6MjA0ODIwNDY3MH0.aKIldw0cF6yfU3SMzM-F6BnCQD8QfOKABxKiFr3ArmQ';
         const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
         document.getElementById('reset-password-form').addEventListener('submit', async (event) => {
