--- a/password-reset.html
+++ b/password-reset.html
@@ -130,11 +130,11 @@
             <form id="reset-password-form">
                 <div class="form-group">
                     <label for="new-password">New Password</label>
-                    <input type="password" id="new-password" name="new-password" required minlength="6">
+                    <input type="password" id="new-password" name="new-password" required minlength="6" autocomplete="new-password">
                 </div>
                 <div class="form-group">
                     <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required minlength="6">
+                    <input type="password" id="confirm-password" name="confirm-password" required minlength="6" autocomplete="new-password">
                 </div>
                 <div id="error-message" class="error-message"></div>
                 <div id="success-message" class="success-message"></div>
@@ -148,7 +148,7 @@
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRjeWNjZ291ZXp3c3Zkb21qdWZnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzI2Mjg2NzAsImV4cCI6MjA0ODIwNDY3MH0.aKIldw0cF6yfU3SMzM-F6BnCQD8QfOKABxKiFr3ArmQ';
         
         // Initialize the Supabase client
-        const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
         // Function to show error message
         function showError(message) {
@@ -168,7 +168,7 @@
 
         // Handle form submission
         document.getElementById('reset-password-form').addEventListener('submit', async (event) => {
-            event.preventDefault();
+            event.preventDefault(); // Prevent form from submitting normally
 
             const newPassword = document.getElementById('new-password').value;
             const confirmPassword = document.getElementById('confirm-password').value;
@@ -186,6 +186,8 @@
                 const refreshToken = hashParams.get('refresh_token');
                 const type = hashParams.get('type');
 
+                console.log('Hash params:', { accessToken, refreshToken, type }); // Debug log
+
                 if (!accessToken || type !== 'recovery') {
                     showError('Invalid password reset link. Please request a new one.');
                     return;
@@ -198,8 +200,11 @@
                 });
 
                 if (sessionError) {
+                    console.error('Session error:', sessionError); // Debug log
                     throw sessionError;
                 }
+
+                console.log('Session set successfully:', session); // Debug log
 
                 // Update the user's password
                 const { error: updateError } = await supabase.auth.updateUser({
@@ -207,6 +212,7 @@
                 });
 
                 if (updateError) {
+                    console.error('Update error:', updateError); // Debug log
                     throw updateError;
                 }
 
@@ -216,6 +222,7 @@
                 document.getElementById('reset-password-form').reset();
                 
             } catch (error) {
+                console.error('Error:', error); // Debug log
                 showError(error.message || 'An error occurred while resetting your password. Please try again.');
             }
         });
