--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Redirecting...</title>
     <script>
-        window.location.href = "https://s4lxlv.github.io/";
+        window.location.href = "https://chromewebstore.google.com/detail/daily-byte-english/acekepmbnnnklfbeagmkncipjdeomieo?authuser=3&hl=en";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://s4lxlv.github.io/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://chromewebstore.google.com/detail/daily-byte-english/acekepmbnnnklfbeagmkncipjdeomieo?authuser=3&hl=en">click here</a>.</p>
 </body>
 </html>
